--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,7 +3,7 @@ main = "src/index.ts"
 compatibility_date = "2024-06-01"
 compatibility_flags = ["nodejs_compat"]
 
-# Static assets
+# Statický assets
 [assets]
 directory = "./public"
 binding = "ASSETS"
