--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,7 +1,10 @@
-name = "sonicjs-ai"
+name = "sonicjs"
 main = "src/index.ts"
 compatibility_date = "2025-06-01"
 compatibility_flags = ["nodejs_compat"]
+
+[observability.logs]
+enabled = true
 
 # Statický assets
 [assets]
@@ -9,49 +12,17 @@ directory = "./public"
 binding = "ASSETS"
 
 [vars]
-ENVIRONMENT = "development"
+ENVIRONMENT = "production"
 # Cloudflare Images configuration (optional)
 # IMAGES_ACCOUNT_ID = "your-id"
 # CDN_DOMAIN = "media.yourdomain.com"
 
 [[d1_databases]]
 binding = "DB"
-database_name = "sonicjs-dev"
-database_id = "474c839b-e107-44f6-a8c8-df03b63612fe"
-
-# R2 Bucket for media storage
-[[r2_buckets]]
-binding = "MEDIA_BUCKET"
-bucket_name = "sonicjs-media-dev"
-
-[env.preview]
-name = "sonicjs-ai-preview"
-
-[env.preview.vars]
-ENVIRONMENT = "preview"
-# IMAGES_ACCOUNT_ID = "your-account-id"
-# CDN_DOMAIN = "media-preview.yourdomain.com"
-
-[[env.preview.d1_databases]]
-binding = "DB"
-database_name = "sonicjs-dev"
-database_id = "474c839b-e107-44f6-a8c8-df03b63612fe"
-
-[[env.preview.r2_buckets]]
-binding = "MEDIA_BUCKET"
-bucket_name = "sonicjs-media-preview"
-
-[env.production]
-name = "sonicjs-ai-prod"
-
-[env.production.vars]
-ENVIRONMENT = "production"
-
-[[env.production.d1_databases]]
-binding = "DB"
 database_name = "sonicjs-prod"
 database_id = "e89894e1-00a2-44cd-97ea-bf8c5dafe2a0"
 
-[[env.production.r2_buckets]]
+# R2 Bucket for media storage
+[[r2_buckets]]
 binding = "MEDIA_BUCKET"
 bucket_name = "sonicjs-media-prod"
